Latest UI  changes Done 10 Dec 2019

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "outline-client",
-  "productName": "Outline",
+  "name": "nzuri-client",
+  "productName": "Nzuri",
   "scripts": {
     "clean": "rm -rf build www node_modules platforms/* plugins/*",
     "postinstall": "bower install || echo no bower needed",
@@ -20,7 +20,7 @@
     "cordova-webintent": "github:cordova-misc/cordova-webintent#v2.0.0",
     "electron-promise-ipc": "^1.0.0",
     "electron-updater": "^4.1.2",
-    "fs-extra": "^7.0.0",
+    "fs-extra": "^7.0.1",
     "raven": "^2.2.1",
     "raven-js": "^3.20.1",
     "socks": "^1.1.10",
@@ -31,12 +31,15 @@
     "@types/auto-launch": "^5.0.0",
     "@types/cordova-plugin-device": "^0.0.3",
     "@types/jasmine": "^2.8.6",
+    "@types/jest": "^24.0.23",
     "@types/node": "^8.0.53",
     "@types/polymer": "^1.2.6",
     "@types/raven": "^2.1.2",
     "@types/semver": "^5.5.0",
     "@types/uuidv4": "^2.0.0",
     "babel-core": "^6.26.0",
+    "babel-plugin-transform-custom-element-classes": "^0.1.0",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babelify": "^8.0.0",
@@ -51,6 +54,7 @@
     "electron": "^7.0.0",
     "electron-builder": "^21.2.0",
     "electron-icon-maker": "^0.0.4",
+    "electron-rebuild": "^1.8.8",
     "gulp": "^4.0.0",
     "gulp-babel": "^7.0.0",
     "gulp-if": "^2.0.2",
