--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es2017",
     "removeComments": false,
     "strict": true,
+    "skipLibCheck":true,
     "module": "commonjs",
     "typeRoots": [
       "../node_modules/@types",
